--- a/src/components/Tabs.css
+++ b/src/components/Tabs.css
@@ -1,178 +1,127 @@
-.body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  /* .body sınıfı yerine direkt body elementi için stil ekleyin */
-.body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-      'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
 .tabs-container {
-    display: flex;
-    flex-direction: column;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f2f2f2;
+  padding: 10px;
+  height: 97vh;
+  width: 100vw;
+}
   
+.admin-panel,
+.user-panel{
+  background-color: #f2f2f2;
+  
+
+}
+.user-panel.active{
+  background-color: #f2f2f2;
+}
+
+
 .tabs {
-    position: fixed; /* Tabları sabit bir konumda tutmak için position: fixed ekleyin */
-    top: 0;
-    left: 0;
-    right: 0;
-    background-color: lightdark;
-    display: flex;
-    overflow: hidden;
-  }
-  
-.tabs button {
-    padding: 10px 15px;
-    margin: 0;
-    border: none;
-    outline: none;
-    cursor: pointer;
-  }
-  
-.tabs button.active {
-    background-color: #ddd;
-  }
-  
-.tab-content {
-    padding: 20px;
-    margin-top: 50px; /* Yukarıdaki tabları içeriğin üzerine bindirmek için margin-top ekleyin */
-    flex-grow: 1;
-  }
-
-  .card {
-    width: 300px;
-    padding: 20px;
-    border: 2px solid #000000;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: #c2e9fb;
-    transition: transform 0.2s ease-in-out;
-  }
-  
-  .card:hover {
-    transform: scale(1.05);
-  }
-  
-  .card-title {
-    font-size: 1.5em;
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  .card-content {
-    font-size: 1em;
-    color: #422800;
-    line-height: 1.6;
-  }
-  .card-button{
-  background-color: #9b8b7a;
-  border: 2px solid #422800;
-  border-radius: 30px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 14px;
-  padding: 0 18px;
-  line-height: 35px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+  display: flex;
+  margin-bottom: 20px;
+  color: rgb(0, 0, 0);
 }
 
+.button {
+  margin: 0 10px;
+  padding: 8px 16px;
+  background-color: #4caf50;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+}
 
-.place-holder {
-  background-color: #fbeee0;
-  border: 2px solid #422800;
+.button:hover {
+  background-color: #B99470;
+}
+
+.active {
+  background-color: #B99470;
+  color: black;
+}
+.pasive {
+  background-color: #fffbf6;
+  color: black;
+}
+
+.middle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+nav {
+  width: 100%;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.inputData {
+  background-color: #FEFAE0;
+  color: #B99470;
+  padding: 10px;
+  margin: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.card-button {
+  padding: 10px;
+  background-color: #B99470;
+  color: rgb(0, 0, 0);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+}
+
+.card-button:hover {
+  background-color: #B99470;
+}
+
+.drop-down {
+  background-color: #FEFAE0;
+  color: #B99470;
+  padding: 10px;
+  margin: 0 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+.card {
+  display: inline-block;
+  width: calc(33.33% -20px);
+  margin: 0 10px 10px 0;
+  box-sizing: border-box;
+  border: 1px solid #A9B388;
+  background-color: #FEFAE0;
+  color: #B99470;
   border-radius: 10px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 15px;
-  padding: 0 18px;
-  line-height: 30px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
-.lists-container {
-  background-color: #fbeee0;
-  border: 2px solid #422800;
-  border-radius: 10px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 15px;
-  padding: 0 18px;
-  line-height: 30px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
+.card-title {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-.list {
-  background-color: #fbeee0;
-  border: 2px solid #422800;
-  border-radius: 10px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 15px;
-  padding: 0 18px;
-  line-height: 30px;
-  text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  
+.card-content {
+  margin-bottom: 5px;
 }
-
-.drop-down{
-  background-color: #fbeee0;
-  border: 2px solid #422800;
-  border-radius: 10px;
-  box-shadow: #422800 4px 4px 0 0;
-  color: #422800;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 400;
-  font-size: 15px;
-  padding: 0 18px;
-  line-height: 30px;
+.header {
+  color: #B99470;
+  font-family: monospace;
   text-align: center;
-  text-decoration: none;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-
 }
-
-  
